tests/transpiler/x/java/outer_join.error
exit status 1
Main.java:26: error: <identifier> expected
         order;
              ^
Main.java:27: error: <identifier> expected
         customer;
                 ^
Main.java:28: error: <identifier> expected
        Data3( order,  customer) {
                    ^
Main.java:28: error: <identifier> expected
        Data3( order,  customer) {
                               ^
Main.java:36: error: <identifier> expected
         customer;
                 ^
Main.java:37: error: <identifier> expected
        Result4(java.util.Map order,  customer) {
                                              ^
6 errors
